fix: - 'Integer.valueOf(int)' not supported by GWT. remove: - TODO
SVN: 4216